--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#100522" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+      user's mobile device or desktop. See http://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
@@ -24,7 +20,49 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <title>Gozuko</title>
+    <meta content="text/html; charset=UTF-8" name="Content-Type" />
+    <meta
+      name="description"
+      content="The mystical Gozuko shogunate, a peaceful kingdom where three Clans serve the Shogun on his eternal search for balance of the divine chill vibes.."
+    />
+    <link rel="icon" href="favicon.ico" />
+    <meta
+      data-react-helmet="true"
+      name="description"
+      content="The mystical Gozuko shogunate, a peaceful kingdom where three Clans serve the Shogun on his eternal search for balance of the divine chill vibes.."
+    />
+    <meta name="title" content="Gozuko" />
+    <meta name="apple-mobile-web-app-title" content="Gozuko" />
+    <!-- <meta name="twitter:site" content="@ZORA_NFT" />
+    <meta name="twitter:creator" content="@ZORA_NFT" /> -->
+    <meta
+      name="description"
+      content="The mystical Gozuko shogunate, a peaceful kingdom where three Clans serve the Shogun on his eternal search for balance of the divine chill vibes.."
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://gozuko.xyz/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Gozuko" />
+    <meta
+      property="og:description"
+      content="The mystical Gozuko shogunate, a peaceful kingdom where three Clans serve the Shogun on his eternal search for balance of the divine chill vibes.."
+    />
+    <meta property="og:image" content="https://gozuko.xyz/card1.png" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="gozuko.xyz" />
+    <meta property="twitter:url" content="https://gozuko.xyz/" />
+    <meta name="twitter:title" content="Gozuko" />
+    <meta
+      name="twitter:description"
+      content="The mystical Gozuko shogunate, a peaceful kingdom where three Clans serve the Shogun on his eternal search for balance of the divine chill vibes.."
+    />
+    <meta property="twitter:image:scr" content="https://gozuko.xyz/card1.png" ></meta>
+    <meta name="twitter:image:src" content="https://gozuko.xyz/card1.png" ></meta>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
